--- a/package.json
+++ b/package.json
@@ -9,14 +9,17 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "autoprefixer": "^10.4.1",
     "expo": "~44.0.2",
     "expo-splash-screen": "~0.14.1",
     "expo-status-bar": "~1.2.0",
+    "postcss": "^8.4.5",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
-    "react-native-tailwindcss": "^1.1.11",
-    "react-native-web": "0.17.1"
+    "react-native-web": "0.17.1",
+    "tailwind-rn": "^3.0.1",
+    "tailwindcss": "^3.0.10"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
