--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
+    "react-native-heroicons": "^2.0.2",
+    "react-native-svg": "^12.1.1",
     "react-native-web": "0.17.1",
     "tailwind-rn": "^3.0.1",
     "tailwindcss": "^3.0.10"
