--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-navigation/native": "^6.0.6",
+    "@react-navigation/native-stack": "^6.2.5",
     "autoprefixer": "^10.4.1",
     "expo": "~44.0.2",
     "expo-splash-screen": "~0.14.1",
@@ -18,6 +20,8 @@
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
     "react-native-heroicons": "^2.0.2",
+    "react-native-safe-area-context": "^3.3.2",
+    "react-native-screens": "^3.10.2",
     "react-native-svg": "^12.1.1",
     "react-native-web": "0.17.1",
     "tailwind-rn": "^3.0.1",
