--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "tailwindcss": "^3.0.10"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9"
+    "@babel/core": "^7.12.9",
+    "expo-cli": "^5.0.3"
   },
   "private": true
 }
