--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/native-stack": "^6.2.5",
     "autoprefixer": "^10.4.1",
+    "dotenv": "^16.0.0",
     "expo": "~44.0.2",
     "expo-blur": "^11.0.0",
     "expo-splash-screen": "~0.14.1",
     "expo-status-bar": "~1.2.0",
+    "firebase": "^9.6.5",
     "postcss": "^8.4.5",
     "react": "17.0.1",
     "react-dom": "17.0.1",
