--- a/package.json
+++ b/package.json
@@ -9,25 +9,31 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-community/masked-view": "^0.1.11",
     "@react-native-firebase/app": "^14.3.0",
     "@react-native-firebase/auth": "^14.2.4",
-    "@react-navigation/native": "^6.0.6",
+    "@react-navigation/native": "^6.0.8",
     "@react-navigation/native-stack": "^6.2.5",
+    "@react-navigation/stack": "^6.1.1",
     "autoprefixer": "^10.4.1",
     "dotenv": "^16.0.0",
     "expo": "~44.0.2",
     "expo-blur": "^11.0.0",
+    "expo-constants": "~13.0.1",
     "expo-splash-screen": "~0.14.1",
     "expo-status-bar": "~1.2.0",
-    "firebase": "^9.6.5",
+    "firebase": "^9.6.6",
     "postcss": "^8.4.5",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
     "react-native-deck-swiper": "^2.0.5",
+    "react-native-dotenv": "^3.3.1",
+    "react-native-gesture-handler": "~2.1.0",
     "react-native-heroicons": "^2.0.2",
-    "react-native-safe-area-context": "^3.3.2",
-    "react-native-screens": "^3.10.2",
+    "react-native-reanimated": "~2.3.1",
+    "react-native-safe-area-context": "3.3.2",
+    "react-native-screens": "~3.10.1",
     "react-native-svg": "^12.1.1",
     "react-native-web": "0.17.1",
     "tailwind-rn": "^3.0.1",
