Added text styling

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "expo": "~44.0.2",
     "expo-blur": "^11.0.0",
     "expo-constants": "~13.0.1",
+    "expo-font": "~10.0.4",
     "expo-splash-screen": "~0.14.1",
     "expo-status-bar": "~1.2.0",
     "firebase": "^9.6.6",
