--- a/package.json
+++ b/package.json
@@ -16,10 +16,10 @@
     "@react-navigation/native-stack": "^6.2.5",
     "@react-navigation/stack": "^6.1.1",
     "autoprefixer": "^10.4.1",
+    "babel-plugin-transform-inline-environment-variables": "^0.4.3",
     "dotenv": "^16.0.0",
     "expo": "~44.0.2",
     "expo-blur": "^11.0.0",
-    "expo-constants": "~13.0.1",
     "expo-font": "~10.0.4",
     "expo-splash-screen": "~0.14.1",
     "expo-status-bar": "~1.2.0",
