--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "expo-font": "~10.0.4",
     "expo-splash-screen": "~0.14.1",
     "expo-status-bar": "~1.2.0",
+    "expo-updates": "~0.11.6",
     "firebase": "^9.6.6",
     "postcss": "^8.4.5",
     "react": "17.0.1",
