--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "expo-av": "~10.2.0",
     "expo-blur": "^11.0.0",
     "expo-font": "~10.0.4",
+    "expo-notifications": "~0.14.0",
     "expo-splash-screen": "~0.14.1",
     "expo-status-bar": "~1.2.0",
     "expo-updates": "~0.11.6",
