--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "expo-status-bar": "~1.2.0",
     "expo-updates": "~0.11.6",
     "firebase": "^9.6.6",
+    "jwt-decode": "^3.1.2",
     "postcss": "^8.4.5",
     "react": "17.0.1",
     "react-dom": "17.0.1",
