--- a/package.json
+++ b/package.json
@@ -41,7 +41,8 @@
     "react-native-svg": "12.1.1",
     "react-native-web": "0.17.1",
     "tailwind-rn": "^3.0.1",
-    "tailwindcss": "^3.0.10"
+    "tailwindcss": "^3.0.10",
+    "twrnc": "^3.3.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
